--- a/exemplo/.htaccess
+++ b/exemplo/.htaccess
@@ -4,16 +4,19 @@
     RewriteRule ^(.*)$ /index.php/$1 [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?/$1 [L]
+    RewriteRule ^(.*)$ index.php/$1 [L]
     Options -Indexes
+
     <files all-wcprops>
-        order allow,deny
-        deny from all
+      order allow,deny
+      deny from all
     </files>
     <files entries>
-        order allow,deny
-        deny from all
+      order allow,deny
+      deny from all
     </files>
+
+    # compress text, html, javascript, css, xml:
     AddOutputFilterByType DEFLATE text/plain
     AddOutputFilterByType DEFLATE text/html
     AddOutputFilterByType DEFLATE text/xml
